test/corpus/expressions.txt
==================
abstraction
==================

a = 1, b => a

---

(program
  (abstraction
    parameters: (parameters
      (parameter
        name: (identifier)
        default: (number))
      (parameter
        name: (identifier)))
    body: (identifier)))

==================
application
==================

a(1)(1)
+(1)
a(1)
+ 1
a 1
1 `a` -b(1)

---

(program
  (application
    (application
      (identifier)
    arguments: (arguments
      (argument
        (number))))
  arguments: (arguments
      (argument
        (number))))
  (application
    (identifier)
  arguments: (arguments
      (argument
        (number))))
  (application
    (identifier)
    arguments: (arguments
      (argument
        (number))))
  (prefix_application
    (identifier)
    argument: (number))
  (prefix_application
    (identifier)
    argument: (number))
  (infix_application
    left: (number)
    right: (prefix_application
      (identifier)
      argument: (application
        (identifier)
        arguments: (arguments
          (argument
            (number)))))))

==================
return
==================

return 1
return a =>
  1

---

(program
  (return
    (number))
  (return
    (abstraction
      (parameters
        (parameter
          (identifier)))
      (block
        (number)))))

==================
pipeline
==================

a.b.c(1)

---

(program
  (application
    (pipeline
      left: (pipeline
        left: (identifier)
        right: (identifier))
      right: (identifier))
    arguments: (arguments
      (argument
        (number)))))

==================
unary expressions
==================

!false
+1
-1
~1

---

(program
  (prefix_application
    (identifier)
    argument: (boolean))
  (prefix_application
    (identifier)
    argument: (number))
  (prefix_application
    (identifier)
    argument: (number))
  (prefix_application
    (identifier)
    argument: (number)))

==================
binary expressions
==================

1 ^ 1
1 * 1
1 / 1
1 + 1
1 - 1
1 % 1
1 < 1
1 <= 1
1 > 1
1 >= 1
1 == 1
1 != 1
a === 1
1 !== b
a ~ b
false && false
false || false
false ==> true <=> true
false && false || false
false || false && false
1 - 1 + 1
1 - -1
1 * 1 / 1 - 1
false || !false
(a.b) . c ^ 1 . (d.e)

---

(program
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (number)
    right: (number))
  (infix_application
    left: (identifier)
    right: (number))
  (infix_application
    left: (number)
    right: (identifier))
  (infix_application
    left: (identifier)
    right: (identifier))
  (infix_application
    left: (boolean)
    right: (boolean))
  (infix_application
    left: (boolean)
    right: (boolean))
  (infix_application
    left: (infix_application
      left: (boolean)
      right: (boolean))
    right: (boolean))
  (infix_application
    left: (infix_application
      left: (boolean)
      right: (boolean))
    right: (boolean))
  (infix_application
    left: (boolean)
    right: (infix_application
      left: (boolean)
      right: (boolean)))
  (infix_application
    left: (infix_application
      left: (number)
      right: (number))
    right: (number))
  (infix_application
    left: (number)
    right: (prefix_application
      (identifier)
      argument: (number)))
  (infix_application
    left: (infix_application
      left: (infix_application
        left: (number)
        right: (number))
      right: (number))
    right: (number))
  (infix_application
    left: (boolean)
    right: (prefix_application
      (identifier)
      argument: (boolean)))
  (infix_application
    left: (pipeline
      left: (pipeline
        left: (identifier)
        right: (identifier))
      right: (identifier))
    right: (pipeline
      left: (number)
      right: (pipeline
        left: (identifier)
        right: (identifier)))))
