test/corpus/literals.txt
==================
boolean
==================

false
true

---

(program
  term: (boolean)
  term: (boolean))

==================
decimal
==================

-0.6_6
+0.1_1
123.4123
1_1.3_1
1_1.0
1e3_4
0.3e1_4
1e322
1e-3
1e3
1.8e10
1.0e10
-1e10

---

(program
  term: (prefix_application
    name: (identifier)
    value: (number))
  term: (prefix_application
    name: (identifier)
    value: (number))
  term: (number)
  term: (number)
  term: (number)
  term: (number)
  term: (number)
  term: (number)
  term: (number)
  term: (number)
  term: (number)
  term: (number)
  term: (prefix_application
    name: (identifier)
    value: (number)))

==================
integer
==================

-1
0xDEAD
0o123
0b001
1_1
0x1_1
0o1_1
0b1_1

---

(program
  term: (prefix_application
    name: (identifier)
    value: (number))
  term: (number)
  term: (number)
  term: (number)
  term: (number)
  term: (number)
  term: (number)
  term: (number))

=====================================
identifier
=====================================

abs
a5_ds_
_private
abs?
+
\
||
/
.?

---

(program
  term: (identifier)
  term: (identifier)
  term: (identifier)
  term: (identifier)
  term: (identifier)
  term: (identifier)
  term: (identifier)
  term: (identifier)
  term: (identifier))

=====================================
string
=====================================

"I'm ok"
'"ok"'
"\\"
"/"
"multiline \
string"
'{func}'

---

(program
  term: (string)
  term: (string)
  term: (string
    escapeSequence: (escape_sequence))
  term: (string)
  term: (string
    escapeSequence: (escape_sequence))
  term: (string
    interpolation: (interpolation
      term: (identifier))))

=====================================
regex
=====================================

r/one\\/
r/one/g
r/one/i
r/one/gim
r/on\/e/gim
r/on[^/]afe/gim
r/[\]/]/

---

(program
  term: (regex
    pattern: (regex_pattern))
  term: (regex
    pattern: (regex_pattern)
    flags: (regex_flags))
  term: (regex
    pattern: (regex_pattern)
    flags: (regex_flags))
  term: (regex
    pattern: (regex_pattern)
    flags: (regex_flags))
  term: (regex
    pattern: (regex_pattern)
    flags: (regex_flags))
  term: (regex
    pattern: (regex_pattern)
    flags: (regex_flags))
  term: (regex
    pattern: (regex_pattern)))
